--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "colorlog>=6.8.0",
     "mypy>=1.17.1",
     "pydantic>=2.11.7",
+    "pytest-asyncio>=1.1.0",
 ]
 
 [project.optional-dependencies]
