--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,11 @@ classifiers = [
 ]
 dependencies = [
     "colorlog>=6.8.0",
+    "httpx>=0.28.1",
     "mypy>=1.17.1",
     "pydantic>=2.11.7",
     "pytest-asyncio>=1.1.0",
+    "pytest-httpserver>=1.1.3",
 ]
 
 [project.optional-dependencies]
@@ -67,6 +69,9 @@ python_functions = ["test_*"]
 addopts = [
     "--strict-markers",
     "--strict-config",
+]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
 
 [dependency-groups]
