--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+exclude = ["tests/", "examples/"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
