--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,7 @@ classifiers = [
 dependencies = [
     "colorlog>=6.8.0",
     "httpx>=0.28.1",
-    "mypy>=1.17.1",
     "pydantic>=2.11.7",
-    "pytest-asyncio>=1.1.0",
-    "pytest-httpserver>=1.1.3",
 ]
 
 [project.optional-dependencies]
@@ -62,6 +59,24 @@ warn_unreachable = true
 strict_equality = true
 exclude = ["tests/", "examples/"]
 
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503"]
+exclude = [".venv", "build", "dist", "__pycache__"]
+
+[tool.bandit]
+exclude_dirs = ["tests", "examples"]
+skips = ["B101", "B601"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
@@ -81,5 +96,10 @@ dev = [
     "mypy>=1.17.1",
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
+    "pytest-asyncio>=1.1.0",
+    "pytest-httpserver>=1.1.3",
     "ruff>=0.12.10",
+    "flake8>=7.0.0",
+    "bandit>=1.7.0",
+    "isort>=5.13.0",
 ]
