Fix coverage issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,11 +68,6 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 
-[tool.flake8]
-max-line-length = 88
-extend-ignore = ["E203", "W503"]
-exclude = [".venv", "build", "dist", "__pycache__"]
-
 [tool.bandit]
 exclude_dirs = ["tests", "examples"]
 skips = ["B101", "B601"]
@@ -90,12 +85,30 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
 
+[tool.coverage.run]
+source = ["core", "crawler"]
+omit = ["tests/*", "examples/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
+
 [dependency-groups]
 dev = [
     "black>=25.1.0",
     "mypy>=1.17.1",
     "pytest>=8.4.1",
-    "pytest-cov>=6.2.1",
+    "coverage>=7.4.0",
     "pytest-asyncio>=1.1.0",
     "pytest-httpserver>=1.1.3",
     "ruff>=0.12.10",
