--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,10 @@ jobs:
       run: uv run pytest tests/ -v --tb=short
 
     - name: Run tests with coverage
-      run: uv run pytest tests/ --cov=core --cov=crawler --cov-report=xml --cov-report=term-missing
+      run: |
+        uv run coverage run -m pytest tests/
+        uv run coverage report
+        uv run coverage xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -110,7 +113,7 @@ jobs:
       run: uv sync
 
     - name: Run flake8
-      run: uv run flake8 core/ crawler/ examples/ --max-line-length=88 --extend-ignore=E203,W503
+      run: uv run flake8 core/ crawler/
 
     - name: Run bandit security checks
       run: uv run bandit -r core/ crawler/ -f json -o bandit-report.json || true
