--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
 ]
 
