Implement FE UI

--- a/env.example
+++ b/env.example
@@ -17,3 +17,7 @@ THEARK_AUTH_HEADER=Authorization
 
 # Logging
 THEARK_LOG_LEVEL=INFO
+
+# Summarization Settings
+THEARK_DEFAULT_SUMMARY_LANGUAGE=Korean
+THEARK_DEFAULT_INTERESTS=Machine Learning,Deep Learning
