--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "colorlog>=6.8.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
