Add category feature

--- a/env.example
+++ b/env.example
@@ -21,3 +21,6 @@ THEARK_LOG_LEVEL=INFO
 # Summarization Settings
 THEARK_DEFAULT_SUMMARY_LANGUAGE=Korean
 THEARK_DEFAULT_INTERESTS=Machine Learning,Deep Learning
+
+# Paper Filtering Settings
+THEARK_PRESET_CATEGORIES=cs.AI,cs.CL,cs.CV,cs.DC,cs.IR,cs.LG,cs.MA
