--- a/env.example
+++ b/env.example
@@ -24,3 +24,8 @@ THEARK_DEFAULT_INTERESTS=Machine Learning,Deep Learning
 
 # Paper Filtering Settings
 THEARK_PRESET_CATEGORIES=cs.AI,cs.CL,cs.CV,cs.DC,cs.IR,cs.LG,cs.MA
+
+# LLM Settings
+THEARK_LLM_MODEL=gpt-4o-mini
+THEARK_LLM_API_BASE_URL=https://api.openai.com/v1
+THEARK_LLM_USE_TOOLS=true
