--- a/env.example
+++ b/env.example
@@ -29,3 +29,6 @@ THEARK_PRESET_CATEGORIES=cs.AI,cs.CL,cs.CV,cs.DC,cs.IR,cs.LG,cs.MA
 THEARK_LLM_MODEL=gpt-4o-mini
 THEARK_LLM_API_BASE_URL=https://api.openai.com/v1
 THEARK_LLM_USE_TOOLS=true
+
+# ArXiv Settings
+THEARK_ARXIV_API_BASE_URL=https://export.arxiv.org/api/query
