On huge refactoring

--- a/env.example
+++ b/env.example
@@ -32,3 +32,11 @@ THEARK_LLM_USE_TOOLS=true
 
 # ArXiv Settings
 THEARK_ARXIV_API_BASE_URL=https://export.arxiv.org/api/query
+
+# Batch Processing Settings
+THEARK_BATCH_SUMMARY_INTERVAL=3600
+THEARK_BATCH_FETCH_INTERVAL=600
+THEARK_BATCH_MAX_ITEMS=1000
+THEARK_BATCH_DAILY_LIMIT=10000
+THEARK_BATCH_ENABLED=true
+THEARK_BATCH_MAX_RETRIES=3
