--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
+    "openai>=1.102.0",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
@@ -41,7 +42,7 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["core", "crawler"]
+packages = ["core"]
 
 [tool.black]
 line-length = 88
@@ -90,7 +91,7 @@ markers = [
 ]
 
 [tool.coverage.run]
-source = ["core", "crawler"]
+source = ["core"]
 omit = ["tests/*", "examples/*"]
 
 [tool.coverage.report]
