--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,19 +38,7 @@ jobs:
     - name: Run tests
       run: uv run pytest tests/ -v --tb=short
 
-    - name: Run tests with coverage
-      run: |
-        uv run coverage run -m pytest tests/
-        uv run coverage report
-        uv run coverage xml
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: false
-
-  format:
+  quality:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -78,75 +66,13 @@ jobs:
     - name: Install dependencies
       run: uv sync
 
-    - name: Check code formatting
-      run: uv run black --check core/ crawler/ api/ examples/
+    - name: Run ruff (linting)
+      run: uv run ruff check core/ api/
 
-    - name: Check import sorting
-      run: uv run isort --check-only core/ crawler/ api/ examples/
+    - name: Run black (formatting)
+      run: uv run black --check core/ api/
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
-      with:
-        version: "latest"
-
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          .venv
-          ~/.cache/uv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
-
-    - name: Install dependencies
-      run: uv sync
-
-    - name: Run flake8
-      run: uv run flake8 core/ crawler/ api/
-
-    - name: Run bandit security checks
-      run: uv run bandit -r core/ crawler/ api/ -f json -o bandit-report.json || true
-
-  typecheck:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
-      with:
-        version: "latest"
-
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          .venv
-          ~/.cache/uv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
-
-    - name: Install dependencies
-      run: uv sync
-
-    - name: Run mypy
-      run: uv run mypy core/ crawler/ api/ --ignore-missing-imports --strict
+    - name: Run mypy (type checking)
+      run: uv run mypy core/ api/ --ignore-missing-imports --strict
 
 
