--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,10 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=8.4.1",
-    "pytest-cov>=4.0.0",
     "black>=23.0.0",
     "mypy>=1.0.0",
     "ruff>=0.1.0",
+    "isort>=5.13.0",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -73,9 +73,29 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 
-[tool.bandit]
-exclude_dirs = ["tests", "examples"]
-skips = ["B101", "B601"]
+[tool.ruff]
+target-version = "py311"
+line-length = 88
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "B006",  # do not use mutable data structures for argument defaults
+    "B904",  # exception chaining - too many to fix right now
+    "UP007", # Union type annotations - prefer Union for clarity
+    "UP038", # isinstance with tuple - prefer tuple for clarity
+]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -90,35 +110,15 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
 
-[tool.coverage.run]
-source = ["core"]
-omit = ["tests/*", "examples/*"]
 
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "if self.debug:",
-    "if settings.DEBUG",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if 0:",
-    "if __name__ == .__main__.:",
-    "class .*\\bProtocol\\):",
-    "@(abc\\.)?abstractmethod",
-]
 
 [dependency-groups]
 dev = [
     "black>=25.1.0",
     "mypy>=1.17.1",
     "pytest>=8.4.1",
-    "coverage>=7.4.0",
     "pytest-asyncio>=1.1.0",
     "pytest-httpserver>=1.1.3",
     "ruff>=0.12.10",
-    "flake8>=7.0.0",
-    "bandit>=1.7.0",
     "isort>=5.13.0",
-    "pytest-cov>=6.2.1",
 ]
