--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ ensure_newline_before_comments = true
 [tool.ruff]
 target-version = "py311"
 line-length = 88
-select = [
+lint.select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
     "F",  # pyflakes
@@ -85,7 +85,7 @@ select = [
     "C4", # flake8-comprehensions
     "UP", # pyupgrade
 ]
-ignore = [
+lint.ignore = [
     "E501",  # line too long, handled by black
     "B008",  # do not perform function calls in argument defaults
     "B006",  # do not use mutable data structures for argument defaults
@@ -94,7 +94,7 @@ ignore = [
     "UP038", # isinstance with tuple - prefer tuple for clarity
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
 [tool.pytest.ini_options]
