--- a/env.example
+++ b/env.example
@@ -29,6 +29,7 @@ THEARK_PRESET_CATEGORIES=cs.AI,cs.CL,cs.CV,cs.DC,cs.IR,cs.LG,cs.MA
 THEARK_LLM_MODEL=gpt-4o-mini
 THEARK_LLM_API_BASE_URL=https://api.openai.com/v1
 THEARK_LLM_USE_TOOLS=true
+THEARK_LLM_MAX_RETRIES=3
 
 # ArXiv Settings
 THEARK_ARXIV_API_BASE_URL=https://export.arxiv.org/api/query
