--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+    "aiosqlite>=0.21.0",
+    "alembic>=1.16.5",
     "colorlog>=6.8.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
@@ -29,6 +31,8 @@ dependencies = [
     "openai>=1.102.0",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "sqlalchemy[asyncio]>=2.0.43",
+    "sqlmodel>=0.0.24",
     "uvicorn>=0.35.0",
 ]
 
@@ -110,8 +114,6 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
 
-
-
 [dependency-groups]
 dev = [
     "black>=25.1.0",
@@ -121,4 +123,5 @@ dev = [
     "pytest-httpserver>=1.1.3",
     "ruff>=0.12.10",
     "isort>=5.13.0",
+    "sqlalchemy[mypy]>=2.0.43",
 ]
