--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,13 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Vite
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # Virtual environments
 .venv/
 venv/
